small layout fixes

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body style="
   background-image: url('./assets/img/pessoaRezandoTerco.jpg');
   background-position: top; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-attachment: fixed;
   background-size: cover; /* Resize the background image to cover the entire container */">
   <app-root></app-root>
 </body>
